# calculator

./: Makefile  README.rst  pyproject.toml
calculator/: __init__.py  __main__.py  model.py
