[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
hp28 = "calculator.__main__:rpn_cli"
ti88 = "calculator.__main__:infix_cli"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
